--- a/Style.css
+++ b/Style.css
@@ -1,4 +1,29 @@
 body {
-    background-color: red;
+    font-family: Arial, sans-serif;
     text-align: center;
   }
+  
+  form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 50px; /* Ajuste o valor para controlar o espaçamento superior */
+  }
+  
+  input[type="text"] {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px 0 0 5px;
+    width: 250px; /* Ajuste a largura conforme necessário */
+  }
+  
+  button[type="submit"] {
+    padding: 10px 20px;
+    background-color: #4CAF50; /* Verde */
+    color: white;
+    border: none;
+    border-radius: 0 5px 5px 0;
+    cursor: pointer;
+  
+  }
+  
