--- a/Style.css
+++ b/Style.css
@@ -1,5 +1,8 @@
 body {
     
+    background-image: url('img/empty-soccer-stadium-with-dreamy-fantasy-view-sky.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
     font-family: Arial, sans-serif;
     text-align: center;
     padding: 100px;
@@ -27,6 +30,14 @@ body {
     border-radius: 0 5px 5px 0;
     cursor: pointer;
   
+  }
+  footer{
+    color:black; 
+
+  }
+
+  header{
+    color:black;
   }
  
   
